fix(mail): chips wrap and flow more predictably.

--- a/src/styles/components/chip-wrapper.scss
+++ b/src/styles/components/chip-wrapper.scss
@@ -1,7 +1,7 @@
 .chip-wrapper {
   @extend %flex-row;
   @extend %flex-align-center;
-  background-color: $background-root;
+  background-color: transparent;
   flex: 1 1 auto;
   flex-wrap: wrap;
   margin-right: auto;
